optimize for production

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>React Boilerplate</title>
 
-    <link rel="stylesheet" href="dists/bundle.css">
+    <link rel="stylesheet" href="./dists/bundle.css">
   </head>
   <body>
     <div id="root" style="height: 600px;"></div>
